@@ -31,10 +31,14 @@
 
 #include "Object.h"
 #include "Object-inl.h"
+#include "Pair.h"
+#include "Pair-inl.h"
 #include "Bignum.h"
 #include "Ratnum.h"
 #include "Flonum.h"
 #include "Arithmetic.h"
+#include "ProcedureMacro.h"
+#include "TextualOutputPort.h"
 
 using namespace scheme;
 
@@ -65,8 +69,25 @@ Object Flonum::op(Flonum* n1, Bignum* n2)\
 
 MAKE_LOCAL_OP(add, +)
 MAKE_LOCAL_OP(sub, -)
-MAKE_LOCAL_OP(mul, *)
 MAKE_LOCAL_OP(div, /)
+MAKE_LOCAL_OP(mul, *)
+
+// // Bignum(n2) * n1 is more exact than n1->toDouble() * n2->value
+// Object Flonum::mul(Bignum* n1, Flonum* n2)
+// {
+//     Bignum* b2 = new Bignum();
+//     b2->setDouble(n2->value());
+//     return Arithmetic::inexact(Bignum::mul(n1, b2));
+// }
+// Object Flonum::mul(Flonum* n1, Bignum* n2)
+// {
+//     Bignum* b1 = new Bignum();
+//     b1->setDouble(n1->value());
+//     printf("n1=%f\n", n1);
+//     VM_LOG2("ret=~a n2=~a", Bignum::mul(b1, n2), Object::makeBignum(n2));
+//     return Arithmetic::inexact(Bignum::mul(b1, n2));
+// }
+
 
 Object Flonum::toRatnum() const
 {
