@@ -358,8 +358,8 @@ void TextualOutputPort::putDatum(Object o, bool inList /* = false */)
         putDatum(record->recordTypeDescriptor()->name(), inList);
         putString(UC(" "));
         for (int i = 0; i < record->fieldsLength(); i++) {
-            putDatum(record->fieldAt(i));
-            putString(UC(" "));
+//             putDatum(record->fieldAt(i));
+//             putString(UC(" "));
         }
         putString(UC(">"));
     } else if (o.isObjectPointer()) {
